[metadata]
name = astro-model-cat
author = John Baker, Bernard Kelly, Scott Noble, Jeremy Schnittman, Leo Singer
author_email = scott.c.noble@nasa.gov
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = https://asd.gsfc.nasa.gov/mossaic/
description = Catalogue of and tool for using theoretical models of sources relevant to time-domain, multi-wavelength, multi-messenger astrophysics and astronomy. 
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = scnastro/astro-model-cat

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
astro-model-cat = data/*

[tool:pytest]
testpaths = "astro-model-cat" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astro-model-cat/_astropy_init*
    astro-model-cat/conftest.py
    astro-model-cat/*setup_package*
    astro-model-cat/tests/*
    astro-model-cat/*/tests/*
    astro-model-cat/extern/*
    astro-model-cat/version*
    */astro-model-cat/_astropy_init*
    */astro-model-cat/conftest.py
    */astro-model-cat/*setup_package*
    */astro-model-cat/tests/*
    */astro-model-cat/*/tests/*
    */astro-model-cat/extern/*
    */astro-model-cat/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
